--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,9 @@ Author: ShapeBootstrap
 Author URL: http://shapebootstrap.net
 
 */
+/*************************
+**********Custom**********
+ */
 .error {
   color: #ff685b;
   display: block;
